Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberText.quorum
class Main
    action Main
        number v = Test()
    end

    action Test() returns number
        text var = "text"
        return var
    end
end